--- a/songbird/src/index.css
+++ b/songbird/src/index.css
@@ -60,3 +60,45 @@ h5 {
 .menu-item-active {
   background-color: #00bc8c;
 }
+.second-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.birds-list-wrapper {
+  width: 50%;
+}
+.birds-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+}
+.birds-item {
+  padding: .85rem 1.25rem;
+  background-color: #303030;
+  border: 1px solid #555;
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+.birds-item:hover {
+  background-color: #444;
+}
+.birds-item:first-child {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+.birds-item:last-child {
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+.li-btn {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-right: 15px;
+  border-radius: 50%;
+  -webkit-transition: .1s;
+  transition: .1s;
+  background-color: #444;
+}
