--- a/songbird/src/index.css
+++ b/songbird/src/index.css
@@ -54,8 +54,10 @@ h5 {
   list-style: none;
   background-color: #008966;
 }
-.menu-item {
-  padding: 10px 30px;
+.menu-item, .menu-item-active {
+  padding: 10px 0;
+  width: calc(100% / 6);
+  text-align: center;
 }
 .menu-item-active {
   background-color: #00bc8c;
