--- a/songbird/src/index.css
+++ b/songbird/src/index.css
@@ -38,10 +38,11 @@ h5 {
 }
 .logo {
   background-image: url(assets/logo.png);
-  width: 200px;
+  width: 320px;
   height: 55px;
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
 }
 .menu {
   justify-content: space-between;
